src/Tests/Error/TypeScalarError.php
<?php

namespace ColdBolt\Tests\Error;

use ColdBolt\Tests\Error\AssertError;

class TypeScalarError extends AssertError
{
}
